--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cometchat_calls_uikit: ^4.0.1
-  cometchat_chat_uikit: ^4.0.3
+  cometchat_calls_uikit: ^4.3.0
+  cometchat_chat_uikit: ^4.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -43,6 +43,10 @@ dependencies:
   flutter_apns_x: ^0.0.1
   flutter_apns_only: any
   shared_preferences: ^2.2.1
+#  awesome_notifications: ^0.9.3+1
+
+
+
 
 dev_dependencies:
   flutter_test:
@@ -53,14 +57,17 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
+
 dependency_overrides:
   flutter_local_notifications: ^13.0.0
+  intl: ^0.19.0
+
 flutter:
 
   # The following line ensures that the Material Icons font is
