--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_apns_x: ^0.0.1
   flutter_apns_only: any
   shared_preferences: ^2.2.1
+  http: ^1.1.0
 #  awesome_notifications: ^0.9.3+1
 
 
@@ -78,6 +79,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/sample_app/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
