--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cometchat_calls_uikit: ^4.0.1
-  cometchat_chat_uikit: ^4.0.3
+  cometchat_calls_uikit: ^4.3.2
+  cometchat_chat_uikit: ^4.5.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -43,6 +43,7 @@ dependencies:
   flutter_apns_x: ^0.0.1
   flutter_apns_only: any
   shared_preferences: ^2.2.1
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/sample_app/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
